[package]
name = "unusual_refrugee_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
log = "0.4"
rocket_contrib = "0.4.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
job_scheduler = "*"
stargate-grpc = "0.4.0"
tokio = { version = "1", features = ["full"]}
rand = "0.8.5"
